sklearn code along

--- a/Code_alongs/L2-my_sklearn.ipynb
+++ b/Code_alongs/L2-my_sklearn.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,8 @@
      "output_type": "stream",
      "text": [
       "Parameters: [13.02832938  9.88465985  0.69237469]\n",
-      "Intercept: 2.7418553248528124\n"
+      "Intercept: 2.7418553248528124\n",
+      "Coefficient of multiple determination R^2: 0.906\n"
      ]
     }
    ],
@@ -214,9 +215,44 @@
     "model = LinearRegression() # create an instance of the model\n",
     "model.fit(scaled_X_train, y_train) # fit the model to the scaled training data\n",
     "\n",
-    "print(f\"Parameters: {model.coef_}\")\n",
-    "print(f\"Intercept: {model.intercept_}\")"
+    "print(f\"Parameters: {model.coef_}\") # the coefficients\n",
+    "print(f\"Intercept: {model.intercept_}\") # the intercept\n",
+    "print(f\"Coefficient of multiple determination R^2: {model.score(scaled_X_train, y_train):.3f}\") # the R^2 score"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error, MAE: 1.512\n",
+      "Mean Squared Error, MSE: 3.797\n",
+      "Root Mean Squared Error, RMSE: 1.949\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "\n",
+    "y_pred = model.predict(scaled_X_test) # predict the test data\n",
+    "\n",
+    "mae = mean_absolute_error(y_test, y_pred) # the mean absolute error\n",
+    "mse = mean_squared_error(y_test, y_pred) # the mean squared error\n",
+    "rmse = np.sqrt(mse) # the root mean squared error\n",
+    "\n",
+    "print(f\"Mean Absolute Error, MAE: {mae:.3f}\\nMean Squared Error, MSE: {mse:.3f}\\nRoot Mean Squared Error, RMSE: {rmse:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
